<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="action_settings">Settings</string>
    <string name="crime_title_hint">Enter crime title</string>
    <string name="crime_title">Title</string>
    <string name="crime_details">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="menu_item_new_crime">New</string>
    <string name="menu_item_show_subtitle">Show subtitle</string>
    <plurals name="subtitle_crime_count_format">
        <item quantity="one">Count: %1$s crime</item>
        <item quantity="other">Count: %1$s crimes</item>
    </plurals>
    <string name="hide_subtitle">Hide</string>
    <string name="show_subtitle">Show</string>
    <string name="menu_item_delete_crime">Delete</string>
    <string name="crime_suspect_text">Choose suspect</string>
    <string name="crime_report_text">Send crime report</string>

    <string name="crime_report">%1$s!
        The crime was discovered on %2$s. %3$s, and %4$s
    </string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="crime_call_text">Call suspect</string>
    <string name="take_picture_of_the_crime">Take picture of the crime</string>
    <string name="crime_picture">Crime picture</string>
</resources>
